refactor: parameter names,and to not throw error when downloading file in case there is nothing to show, instead empty file is returned
